<resources>
    <string name="app_name">MickleDeals</string>
    <string name="versionNo">1.0</string>
    <string name="facebook_app_id">1568512020076583</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="google_play_link">"https://play.google.com/store/apps/details?id=com.mickledeals"</string>
    <string name="itunes_link"></string>
    <string name="continue_in_launch">Get Started!</string>
    <string name="intro_signup_message">Sign up now and get free\ncredits to buy coupon</string>
    <string name="intro_discover_message">Discover additional ways to\nreceive more credits while\nexploring MickleDeals</string>
    <string name="skip">SKIP</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_deals">My Coupons</string>
    <string name="menu_saved_deals">Saved Coupons</string>
    <string name="menu_random">Random Coupons</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_account">Payment Method</string>
    <string name="menu_redeem">Gift Redeem</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQs</string>
    <string name="menu_promote">Promote Your Business</string>
    <string name="menu_feedback">Contact Us / Send Feedback</string>
    <string name="menu_rate">Give Us Good Reviews</string>
    <string name="menu_about">About Us</string>
    <string name="nearby_tab_text">BROWSE</string>
    <string name="featured_tab_text">FEATURED</string>
    <string name="category_select">Select Category</string>
    <string name="current_location">Current Location</string>
    <string name="no_results_found">No matched results found :(</string>
    <string name="try_different_filter">Please select a different location or category to search</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_all">Clear All</string>
    <string name="hot_search">Trending Searches</string>
    <string name="search_hint">Search for Category, Place...etc</string>
    <string name="no_results_found_in_search">No \"%1$s\" deals found :(</string>
    <string name="no_results_found_in_search_in_location">No \"%1$s\" deals found in %2$s :(</string>
    <string name="empty_search_msg">Please try a new search</string>
    <string name="search_results">Search Results</string>
    <string name="clear">Clear</string>
    <string name="expiring">Expiring</string>
    <string name="available">Available</string>
    <string name="expired">Expired</string>
    <string name="used">Used</string>
    <string name="expired_on">Expires %s</string>
    <string name="used_on">Used on %s</string>
    <string name="buy_again">Buy again</string>
    <string name="redeem">REDEEM</string>
    <string name="deal_ended">Deal Ended</string>
    <string name="no_my_coupons_msg">You do not have any coupons yet</string>
    <string name="empty_save_msg">You will see your saved coupons here by tapping on the star icon on the coupon</string>
    <string name="remove_save_msg">Are you sure you want to remove this coupon from Saved Coupons?</string>
    <string name="new_added_coupons">New Added Coupons</string>
    <string name="popular_coupons">Popular Coupons</string>
    <string name="this_week_best_deals">This Week\'s Best Deals</string>
    <string name="feature_slider_text">Main Feature</string>
    <string name="save">SAVE</string>
    <string name="saved">SAVED</string>
    <string name="share">SHARE</string>
    <string name="business_info">Business\nProfile</string>
    <string name="more_coupon">More Coupon in This Place</string>
    <string name="limited_availability">Limited Availability</string>
    <string name="fine_print">Fine Print</string>
    <string name="fine_print_footer">Merchant is solely responsible for the care and quality of the goods and services it provides to coupon users.</string>
    <string name="expired_in_days">Expires in %s days after purchase</string>
    <string name="expired_date">Expires on %s</string>
    <string name="unlock_coupon">Get this Coupon for %s</string>
    <string name="redeem_coupon">Redeem this Offer</string>
    <string name="redeem_in">"Redeem in "</string>
    <string name="purchase_date">You got this coupon on %s</string>
    <string name="purchase_id_message">Coupon ID #%s</string>
    <string name="coupon_not_available">This coupon is not available anymore</string>
    <string name="share_fb_message">I just got this great coupon from MickleDeals!</string>
    <string name="share_subject">A great coupon from MickleDeals!</string>
    <string name="share_msg">Let\'s check out the deal from MickleDeals App in Google Play Store now! iOS version will be coming soon</string>
    <string name="share_business_page_msg">Let\'s check out %s\'s profile and see what it offers in the MickleDeals App now!</string>
    <string name="share_google_play">"Google Play Store: "</string>
    <string name="share_itunes">"iTunes App Store: "</string>
    <string name="share_to">Share to...</string>
    <string name="share_failed">Share Failed</string>
    <string name="nav_text_more">More</string>
    <string name="directions">Directions</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="payment_method">Payment Method</string>
    <string name="coupon_price">Coupon Price</string>
    <string name="total_price">Total Price</string>
    <string name="current_credit">Current Credit: %s</string>
    <string name="mickle_credit_text">Mickle Credit</string>
    <string name="review_order">REVIEW ORDER</string>
    <string name="add">Add</string>
    <string name="no_payment_message">Please add a payment method in order to purchase.</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="no_charge_msg">No Charge At All!</string>
    <string name="agreeTermsWhenPurchase">By confirming the purchase, I agree to MickleDeals\'</string>
    <string name="and">and</string>
    <string name="success_purchase_title">This Coupon is Now Yours!</string>
    <string name="success_purchase_msg">To use the coupon, tap on Redeem button and show the verification screen to business</string>
    <string name="share_to_fb">Share to Facebook</string>
    <string name="share_to_fb_purchase">To appreciate your purchase, you will receive $1 Mickle Credit when you share this to your friends!</string>
    <string name="share_to_fb_free">Share this to your friends!</string>
    <string name="share_to_fb_free_succeed">Successfully shared to Facebook!</string>
    <string name="share_to_fb_purchase_succeed">Successfully shared to Facebook, you just earned $1 Mickle Credit!</string>
    <string name="confirm_redeem_title">Are you sure you want to Redeem now?</string>
    <string name="confirm_redeem_msg">This coupon cannot be reused once you leave the verification screen</string>
    <string name="redeem_now">Redeem Now</string>
    <string name="mark_as_used">Mark as Used</string>
    <string name="mark_as_used_confirm">Are you done redeeming this offer?</string>
    <string name="mark_as_used_confirm_msg">Once you mark this offer as used, you will not be able to redeem again.</string>
    <string name="mark_as_used_yes">Yes, Mark as Used</string>
    <string name="mark_as_used_no">Not Yet</string>
    <string name="redeem_dialog_header">Thanks for using this coupon for</string>
    <string name="expires_in">Expires in </string>
    <string name="redeem_dialog_footer">Show this verification screen to the business when redeeming your offer.</string>
    <string name="full_details"><u>Full Details</u></string>
    <string name="coupon_description">Coupon Description</string>
    <string name="business_name">Business Name</string>
    <string name="fine_print_english">Fine Print</string>
    <string name="fine_print_redeem"><u>Fine Print</u></string>
    <string name="news">News</string>
    <string name="photos">Photos</string>
    <string name="info">Info</string>
    <string name="coupons">Coupons</string>
    <string name="open_hours">Open Hours</string>
    <string name="get_directions">Get Directions</string>
    <string name="website">Website</string>
    <string name="business_page_footer">All information on this page is provided by the merchant.</string>
    <string name="payment_methods">Payment Method</string>
    <string name="saved_methods">Saved Methods</string>
    <string name="add_paypal">Add PayPal</string>
    <string name="add_card">Add Credit /\n Debit Card</string>
    <string name="mickle_credit">Mickle Credit: %s</string>
    <string name="mickle_credit_footer">Mickle Credit is for buying coupon only. It cannot be used on transaction between you and the Merchant.</string>
    <string name="your_mickle_credit">Your Mickle Credit: %s</string>
    <string name="save_payment_hint">Add a payment method to receive $5 Mickle Credit</string>
    <string name="no_payment_msg">You do not have any payment method yet. Please start adding by one of the methods below.</string>
    <string name="get_more_credit">How to get more Mickle Credit?</string>
    <string name="get_more_credit_dialog_title">How to get more Mickle Credit</string>
    <string name="get_more_credit_dialog_msg">1. If you log in for 7 consecutive days, you will receive $2 Mickle Credit
    \n\n2. After you purchased a coupon, tap on Facebook share button to share and you will receive $1 Mickle Credit</string>
    <string name="secure_transmitted_msg">All information is transmitted securely by PayPal</string>
    <string name="enter_card_details">Scan or Enter Card Details</string>
    <string name="scan_your_card">Scan your Card</string>
    <string name="credit_card_number">Card Number</string>
    <string name="card_expired_date">Expired Date</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="enter_card_save">SAVE</string>
    <string name="redeem_msg">Enter redeem code below to claim the gift:</string>
    <string name="enter_redeem_code">Enter Redeem Code</string>
    <string name="unlock_gift">Claim Your Gift</string>
    <string name="cancel">Cancel</string>
    <string name="location_error_msg1">We could not get your current location. \nPlease confirm your location service is on and try again</string>
    <string name="location_error_msg2">or sort by other options</string>
    <string name="location_error_choice1">Retry</string>
    <string name="location_error_choice2">Open Settings</string>
    <string name="location_error_choice3">Sort By Date Added</string>
    <string name="location_error_choice4">Sort Randomly</string>
    <string name="or">or</string>
    <string name="login_or_signup">LOG IN / SIGN UP</string>
    <string name="login_with_fb">Log in with Facebook</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook_never_post_msg">We\'ll never post anything without your permission</string>
    <string name="contact_us_message">Send your feedback or questions regarding the app, your account, coupons or anything that can make us serve you better</string>
    <string name="contact_us_reply_email_message">We will reply your message to the email below:</string>
    <string name="contact_us_reply_email_hint">Email (Optional)</string>
    <string name="contact_us_subject_hint">Subject (Optional)</string>
    <string name="contact_us_message_hint">Enter your message here...</string>
    <string name="contact_us_submit">Submit</string>
</resources>