<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noLocationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/defaultLightGrayBg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/location_error_msg1"
        android:textSize="17sp"
        android:padding="20dp"
        android:textColor="@color/lightBlackTextColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/locationErrorRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_error_choice1"
            android:layout_marginRight="10dp" />

        <Button
            android:id="@+id/locationErrorOpenSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/location_error_choice2" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/location_error_msg2"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:textColor="@color/lightBlackTextColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/locationErrorSortDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/location_error_choice3" />

        <Button
            android:id="@+id/locationErrorSortRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/location_error_choice4" />


    </LinearLayout>

</LinearLayout>