<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans_serif-light"
        android:text="@string/contact_us_message"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans_serif-light"
        android:text="@string/contact_us_reply_email_message"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:hint="@string/contact_us_reply_email_hint" />

    <EditText
        android:id="@+id/subjectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contact_us_subject_hint" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/contact_us_message_hint" />

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitClick"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textAllCaps="true"
                android:gravity="center"
                android:background="@drawable/button_selector_bg"
                android:text="@string/contact_us_submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBarLoading"
                style="?android:attr/progressBarStyle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/buttonText"
                android:layout_alignTop="@id/buttonText"
                android:layout_alignLeft="@id/buttonText"
                android:layout_alignRight="@id/buttonText"
                android:padding="8dp"
                android:background="@color/colorButtonBg" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>