<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/defaultLightGrayBg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_card_details"
                android:textColor="@color/lightBlackTextColor"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textColor="@color/themeTextColor"
                android:text="@string/scan_your_card"
                android:onClick="scanBtnClick"
                android:padding="6dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:drawableLeft="@drawable/ic_camera"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="4dp"
                android:background="?android:attr/selectableItemBackground" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cardImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:src="@drawable/ic_empty_card" />

                <EditText
                    android:id="@+id/cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/credit_card_number"
                    android:maxLength="23"
                    android:layout_marginTop="12dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="6dp"
                    android:inputType="phone" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="@string/mm" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="/" />

                <EditText
                    android:id="@+id/yy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="2"
                    android:inputType="number"
                    android:hint="@string/yy" />


                <EditText
                    android:id="@+id/cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:maxLength="4"
                    android:inputType="number"
                    android:hint="@string/cvv" />

                <Space
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/zipcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="5"
                    android:inputType="number"
                    android:hint="@string/zip_code" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/secure_transmitted_msg"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_marginTop="12dp"
                android:drawablePadding="4dp"
                android:textSize="@dimen/sp_11" />

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeTextColor"
                    android:text="@string/cancel"
                    android:layout_marginRight="6dp"
                    android:onClick="cancelBtnClick"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:background="?android:attr/selectableItemBackground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/enter_card_save"
                    android:layout_marginLeft="6dp"
                    android:minWidth="80dp"
                    android:onClick="saveBtnClick"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:background="@drawable/button_selector_bg" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>