<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="18dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/dialogContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/login_or_signup"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                card_view:com_facebook_login_text="@string/login_with_fb"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/facebook_never_post_msg"
                android:textSize="@dimen/sp_12"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="12dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/light_divider"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textStyle="italic"/>


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/light_divider"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />

            </LinearLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textWebEmailAddress"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:padding="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeTextColor"
                    android:text="@string/login"
                    android:textAllCaps="true"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:onClick="loginBtnClick"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:background="@drawable/border_button_selector_bg"/>

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:onClick="signupBtnClick"
                    android:padding="8dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:background="@drawable/button_selector_bg"/>

                </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_gravity="right"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:onClick="forgotPassword"
                android:background="?android:attr/selectableItemBackground"
                android:layout_marginRight="8dp"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>