<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_transparent_icon" />


    <TextView
        android:id="@+id/signupText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/intro_signup_message"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_or_signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>


    <TextView
        android:id="@+id/discoverText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_discover_message"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2" />


    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:padding="12dp"
        android:textSize="15sp" />

</LinearLayout>

